api/fastapi-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi
  namespace: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: localhost:5001/fastapi-iris:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
