api/fastapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
  namespace: mlflow
spec:
  type: ClusterIP
  selector:
    app: fastapi
  ports:
    - port: 8000
      targetPort: 8000
